<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.viper2.agendasqlite.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:rowCount="8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Agenda Telefonica"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_margin="2dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textAlignment="center"
            android:id="@+id/eNombre"
            android:layout_margin="2dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:textAlignment="center"
            android:inputType="number"
            android:id="@+id/eTelefono"
            android:layout_margin="2dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:textAlignment="center"
            android:id="@+id/eCorreo"
            android:layout_margin="2dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:id="@+id/bGuardar"
            android:layout_margin="2dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:id="@+id/bBuscar"
            android:layout_margin="2dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modificar"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:id="@+id/bModificar"
            android:layout_margin="2dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:id="@+id/bEliminar"
            android:layout_margin="2dp"/>

    </GridLayout>
</LinearLayout>
